src/test/ui/or-patterns/feature-gate-or_patterns-leading-let.stderr
error: top-level or-patterns are not allowed in `let` bindings
  --> $DIR/feature-gate-or_patterns-leading-let.rs:7:9
   |
LL |     let | A;
   |         ^^^ help: remove the `|`: `A`

error[E0658]: or-patterns syntax is experimental
  --> $DIR/feature-gate-or_patterns-leading-let.rs:7:9
   |
LL |     let | A;
   |         ^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(or_patterns)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
